fixed spacing in the graphs

--- a/src/components/styles/dashboard.css
+++ b/src/components/styles/dashboard.css
@@ -386,10 +386,10 @@
 
 .badge-holder-dashboard{
   flex:2;
-  background-color: pink;
-  margin-right: 4vh;
-  margin-left: 12vh;
-  border-radius: 4vh;
+  background-color: white;
+  margin-right: 2vh;
+  margin-left: 2vh;
+  border-radius: 3vh;
   border-color: black;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Add box-shadow effect */
   /* width: 10%; */
@@ -438,12 +438,14 @@
 .qs-emotion-dashboard{
   /* display: flex; */
   flex: 5;
-  background-color: black;
+  background-color: white;
   border-color: black;
-  border-radius: 4vh;
+  border-radius: 3vh;
   justify-content: center;
-  margin-left: 2vh;
-  margin-right: 14vh;
+  /* margin-left: 2vh; */
+  border-color: black;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Add box-shadow effect */
+  margin-right: 2vh;
 }
 
 .qs-emotion-dashboard-row1{
@@ -493,27 +495,30 @@
 
   height: 60%;
   margin-left: 1vh;
-  width: 90%;
+  width: 100%;
+  justify-content: center;
 }
 
 
 .custom-row-2 {
   display: flex;
   margin-top: 2vh;
- 
-
 }
 
 .acc-graph-dashboard{
   flex:4;
-  background-color: skyblue;
+  background-color: white;
   margin-right: 2vh;
-  margin-left: 14vh;
+  margin-left: 2vh;
   /* height: 10%; */
-  height:45vh;
+  height:43vh;
   justify-content: center;
+  align-items: center;
+  width: 100%;
   /* width: 45vh; */
-  border-radius: 4vh;
+  border-radius: 3vh;
+  border-color: black;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Add box-shadow effect */
   
 }
 
@@ -523,25 +528,28 @@
 
 .acc-stats-dashboard{
   flex:2;
-  background-color: lightgreen;
+  background-color: white;
   border-radius: 5%;
-  margin-right: 1vh;
+  margin-right: 2vh;
   font-family: cursive;
+  border-color: black;
+  align-items: center;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Add box-shadow effect */
 }
 
 .exercise-dropdown-container-acc{
   margin-top: 2vh;
+  /* align-items: center; */
 
 }
 
 #exercise-select-acc{
-  width: 40%;
+  width: 60%;
   height: 110%;
   font-family: cursive;
   font-size: 2vh;
   border-color: black;
   margin-top: 2vh;
-
 }
 
 .combined-div-acc{
